--- a/templates/components/toasts.html
+++ b/templates/components/toasts.html
@@ -2,8 +2,9 @@
 <div id="toast-stack" class="c-toast-stack" aria-live="polite" aria-atomic="true"></div>
 
 <script>
-    window.__flashed_toasts__ = "{{ flashed | tojson | safe }}";
+    window.__flashed_toasts__ = {{ flashed | tojson | safe }};
 </script>
 
-<script defer src="{{ url_for('static', filename='js/components/toasts.js') }}"></script>
+<script src="{{ url_for('static', filename='js/components/toasts.js') }}"></script>
+
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/toasts.css') }}">
